# falocalrepo-database

./: README.md  pyproject.toml
localrepo_database/: database.py  tables.py  update.py
