[tool.poetry]
name = "localrepo-database"
version = "5.4.3"
description = "Database functionality for localrepo. A fork of falocalrepo."
authors = ["The Solipsis Project <the.solipsis.project@gmail.com>", "Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/solipsis-project/localrepo-database"
repository = "https://github.com/solipsis-project/localrepo-database"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Database",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/solipsis-project/localrepo-database/blob/master/CHANGELOG.md"
"Source" = "https://github.com/solipsis-project/localrepo-database"

[tool.poetry.dependencies]
python = "^3.10"
filetype = "^1.1.0"
chardet = "^5.0.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
